--- a/simple-app/deployment.yml
+++ b/simple-app/deployment.yml
@@ -2,7 +2,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: simple-deployment
+  name: time-deployment
 spec:
   replicas: 1
   selector:
